# ceng477-raytracer

./: .gitignore  CMakeLists.txt  README.md
src/: float3.h
src/Data/Camera/: CameraData.h  ImagePlane.h  ImageRect.h  Resolution.h
src/Data/Collision/: AABB.h  IntersectionResult.h  Ray.h
src/Data/Lights/: AmbientLight.h  AmbientLightData.h  PointLight.h  PointLightData.h
src/Data/Objects/: Mesh.h  MeshData.h  ObjectId.h  Scene.h  Sphere.h  SphereData.h  Triangle.h  TriangleData.h
src/Data/Shading/: MaterialData.h  Rgb.h
src/Debug/: Debug.h
src/Math/: Math.h  float3.h  float3u.h
src/template/: parser.cpp  parser.h  ppm.cpp  ppm.h  raytracer.cpp  tinyxml2.cpp  tinyxml2.h
